# asha-demo

./: .den-playwright.json  .gitignore  AGENTS.md  README.md  agents-project.md  asha.game.toml  asha.project-bundle.json  package-lock.json  package.json  playwright.config.mjs  tsconfig.json  tsconfig.strict-boundary.json
.asha/: studio-project-settings.json
app/: app.js  index.html  project-content.js  styles.css
artifacts/5603/: README.md
artifacts/5606/: README.md
artifacts/5636/: gameplay-module-conformance.json
artifacts/5650/: README.md
artifacts/5654/: README.md
artifacts/milestone-4072/: status.json
assets/: README.md  lock.json
assets/mesh-animation/: kenney-retro-character-medium.glb  kenney-retro-character-medium.manifest.json
assets/mesh-static/: security-door.gltf  security-switch.gltf
assets/voxels/: generated-tunnel.avxl.json
catalogs/actors/: README.md  close-range-trigger.entity.json  console-blue.entity.json  console-parts.entity.json  console-red.entity.json  console-sensor.entity.json  demo-player.entity.json  generated-tunnel-enemy.entity.json  security-door.entity.json  security-switch.entity.json  static-target-dummy.json
catalogs/gameplay/: README.md  catalog.json  default-fps.catalog.json  security-door.behavior.json
catalogs/input/: demo.input.json
catalogs/materials/: README.md  catalog.json  generated-tunnel.materials.json
catalogs/prefabs/: security-switch.prefab.json
catalogs/presentation/: catalog.json
catalogs/spawns/: README.md  generated-tunnel.spawns.json
catalogs/weapons/: README.md  primary-fire.weapon.json
demo-rs/: Cargo.toml
demo-rs/crates/demo-preflight/: Cargo.toml
demo-rs/crates/demo-preflight/src/: main.rs
demo-rs/crates/gameplay-conformance/: Cargo.toml  consumer-needs.json
demo-rs/crates/gameplay-conformance/src/: main.rs
demo-rs/crates/gameplay-host-native/: Cargo.toml
demo-rs/crates/gameplay-host-native/src/: lib.rs
demo-rs/crates/native-runtime-provider/: Cargo.toml
demo-rs/crates/native-runtime-provider/src/: lib.rs
demo-rs/crates/primary-fire-effect/: Cargo.toml
demo-rs/crates/primary-fire-effect/src/: gameplay.rs  lib.rs
demo-rs/crates/primary-fire-effect/tests/: composed_runtime.rs  provider_contract.rs
docs/: demo-surface-audit.md  edit-in-studio.md  host-architecture.md  no-claims.md  playwright-broker.md  proof-disposition.md  studio-authored-content-pipelines.md
fixtures/project-content/: prefab-registry.invalid-dangling-role.json  prefab-registry.invalid-schema.json  (+2 more)
game-rules/: primary-fire-effect.manifest.json
host/: browser.host.json  gameplay-runtime-host.mjs  standalone-bootstrap.mjs  standalone.host.json
policies/: README.md
prefabs/: registry.json
project/: project-bundle.json
replays/: README.md  generated-tunnel-playable-loop.json
scripts/: build-gameplay-host.mjs  build-native-provider.mjs  build-ui.mjs  capture-replay-evidence.mjs  check-content-boundary.mjs  check-dependency-boundary.mjs  check-host-parity.mjs  check-source-architecture.mjs  check-ui-assets.mjs  generate-primary-fire-audio.mjs  print-skeleton-status.mjs  serve-static-ui.mjs  serve-ui.mjs  standalone-host.mjs  sync-authored-content.mjs  ui-status.mjs
src/: app.ts
tests/: live-ui.spec.mjs  presentation-resources.test.mjs
(+22 files in other folders)
