[package]
name = "asha-demo-preflight"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asha-demo-primary-fire-effect = { path = "../primary-fire-effect" }
asha-gameplay-module-sdk = { path = "../../../../asha-engine/public-rust/gameplay-module-sdk" }
asha-runtime-session-composition = { path = "../../../../asha-engine/public-rust/runtime-session-composition" }
serde_json = "1"
toml = "0.9"

[[bin]]
name = "asha-demo-preflight"
path = "src/main.rs"
