[package]
name = "asha-demo-gameplay-conformance"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asha-demo-primary-fire-effect = { path = "../primary-fire-effect" }
asha-gameplay-module-conformance = { path = "../../../../asha-engine/public-rust/gameplay-module-conformance" }
asha-gameplay-module-sdk = { path = "../../../../asha-engine/public-rust/gameplay-module-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "asha-demo-gameplay-conformance"
path = "src/main.rs"
