[package]
name = "asha-demo-primary-fire-effect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asha-game-rule-extension = { path = "../../../../asha-engine/public-rust/game-rule-extension" }
asha-gameplay-module-sdk = { path = "../../../../asha-engine/public-rust/gameplay-module-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
