[package]
name = "asha-demo-primary-fire-effect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asha-gameplay-module-sdk = { path = "../../../../asha-engine/public-rust/gameplay-module-sdk" }
asha-runtime-session-composition = { path = "../../../../asha-engine/public-rust/runtime-session-composition" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
